# Rtype-like

./: CMakeLists.txt  RFC_doc.txt
Client/: CMakeLists.txt  a.out
Client/include/: Client.hpp  DisplayInfo.hpp  EventManager.hpp  UDPClient.hpp
Client/src/: Client.cpp  DisplayInfo.cpp  EventManager.cpp  UDPClient.cpp  main.cpp
Com/: BinaryConverter.cpp  BinaryConverter.hpp
Configuration/: texture.conf
Server/: Makefile  client.c  client.hpp  client_udp.cpp  server.cpp
Server/Game/: CMakeLists.txt  UDPServer.cpp  UDPServer.hpp  main.cpp  server.hpp  server_udp.cpp
Server/Game/Encapsulation/SFML-2.5.1-Compiled/include/SFML/: Config.hpp
Server/Game/Encapsulation/SFML-2.5.1-Compiled/include/SFML/Graphics/: Shader.hpp  Transformable.hpp
Server/Game/Encapsulation/SFML-2.5.1-Compiled/include/SFML/Network/: Http.hpp  IpAddress.hpp
Server/Game/Encapsulation/SFML-2.5.1-Compiled/include/SFML/System/: ThreadLocal.hpp
Server/Game/Encapsulation/SFML-2.5.1-Compiled/include/SFML/Window/: Cursor.hpp  Window.hpp
Server/Game/Encapsulation/SFML-2.5.1-Compiled/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
Server/Game/Encapsulation/SFML-2.5.1-Compiled/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
Server/Game/Encapsulation/include/: SFMLEvent.hpp  SFMLGraphics.hpp  SFMLMusic.hpp  SFMLWindow.hpp  Time.hpp
Server/Game/Encapsulation/src/: SFMLEvent.cpp  SFMLGraphics.cpp  SFMLWindow.cpp  Time.cpp
Server/Game/Enemies/: Enemies.cpp  Enemies.hpp  Makefile
Server/Game/GameEngine/include/: GameEngine.hpp  Scene.hpp  SceneFactory.hpp  SceneManager.hpp
Server/Game/GameEngine/src/: GameEngine.cpp  Scene.cpp  SceneFactory.cpp  SceneManager.cpp
Server/Game/GameObject/include/: GameObject.hpp  PositionManager.hpp  StateManager.hpp
Server/Game/GameObject/src/: GameObject.cpp  PositionManager.cpp  StateManager.cpp
Server/Game/Menu/include/: Animated.hpp  Button.hpp  Choice.hpp  Menu.hpp  MenuImage.hpp  Slider.hpp  TextInput.hpp
Server/Game/Menu/resources/: SplashScreen.conf
Server/Game/Menu/src/: Animated.cpp  Button.cpp  Choice.cpp  Menu.cpp  MenuImage.cpp  Slider.cpp  TextInput.cpp
Server/Game/Miscellaneous/include/: Types.hpp
Server/Game/R-type/include/: Bullet.hpp  Enemy2.hpp  Enemy3.hpp  Obstacle.hpp  Player.hpp  PlayerControler.hpp  ShootPowerUp.hpp  SpeedPowerUp.hpp
Server/Game/R-type/src/: Bullet.cpp  Enemy2.cpp  Enemy3.cpp  Obstacle.cpp  Player.cpp  PlayerControler.cpp  ShootPowerUp.cpp  SpeedPowerUp.cpp
test_async/: clienttest.cpp  clienttest.hpp  servertest.cpp  servertest.hpp
